[project]
name = "chatenium-backend"
version = "0.1.0"
description = "Linux-only GPL-3 backend package for Chatenium"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
dependencies = [
    "requests>=2.31",
    "keyring>=24.0",
    "aiohttp>=3.9"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
